--- a/cost/CMakeLists.txt
+++ b/cost/CMakeLists.txt
@@ -1,6 +1,8 @@
 file(GLOB cost_headers ${CMAKE_CURRENT_SOURCE_DIR} *.hpp)
 file(GLOB cost_sources ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
 
+set_directory_properties(PROPERTIES CORRADE_USE_PEDANTIC_FLAGS ON)
+
 add_library(cost STATIC ${cost_sources} ${cost_headers})
 target_include_directories(cost PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
