--- a/phasefields.conf
+++ b/phasefields.conf
@@ -1,4 +1,11 @@
-
-
-epsilon=1e-2
-enforce_connectedness=true
+epsilon=0.05
+a=0.01
+b=1.05
+modica_mortola_weight=1
+area_weight=50
+connectedness_weight=2
+enforce_connectedness=false
+post_connect=true
+input_path=/home/janos/data/spot.ply
+output_path1=/home/janos/data/spot_out1.ply
+output_path2=/home/janos/data/spot_out2.ply
