--- a/viewer/CMakeLists.txt
+++ b/viewer/CMakeLists.txt
@@ -12,8 +12,10 @@ add_library(viewer
         scene.cpp
         object.hpp
         camera.hpp
-        default_callback.cpp
-        default_callback.hpp)
+        upload.cpp
+        upload.hpp
+        draw_callbacks.cpp
+        draw_callbacks.hpp)
 
 target_include_directories(viewer PUBLIC ${CMAKE_CURRENT_LIST_DIR})
 target_link_libraries(viewer
@@ -25,6 +27,8 @@ target_link_libraries(viewer
             Magnum::SceneGraph
             Magnum::Application
             Magnum::Shaders
+        PRIVATE
+            Boost::Boost
         )
 
 
