--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.13)
 project(phasefields)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 17)
+
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/modules)
 list(APPEND CMAKE_PREFIX_PATH ${CMAKE_CURRENT_LIST_DIR}/conan_modules)
@@ -22,7 +23,8 @@ find_package(ParallelSTL CONFIG REQUIRED)
 #find_package(Enoki CONFIG REQUIRED)
 
 set_directory_properties(PROPERTIES CORRADE_USE_PEDANTIC_FLAGS ON)
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fsanitize=undefined")
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+#list(APPEND CMAKE_CXX_FLAGS "-fsanitize=address -fsanitize=undefined")
 
 add_subdirectory(scoped_timer)
 add_subdirectory(viewer)
@@ -33,7 +35,7 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(Ipopt REQUIRED IMPORTED_TARGET ipopt)
 
 #set(CMAKE_CXX_STANDARD_LIBRARIES tbb)
-set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES /usr/local/include/c++/10.0.1)
+#set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES /usr/local/include/c++/10.0.1)
 
 add_executable(segmentation
         main.cpp
@@ -51,7 +53,7 @@ target_link_libraries(segmentation PRIVATE
         phasefields::io
         MagnumIntegration::Eigen
         Magnum::Primitives
-        Boost::Boost
+        fmt::fmt
         OpenMeshCore
         ceres
         )
