--- a/phasefields.conf
+++ b/phasefields.conf
@@ -6,6 +6,8 @@ area_weight=50
 connectedness_weight=2
 enforce_connectedness=false
 post_connect=true
+post_connect_iterations=200
+iterations=2000
 input_path=/home/janos/data/spot.ply
 output_path1=/home/janos/data/spot_out1.ply
 output_path2=/home/janos/data/spot_out2.ply
