--- a/cost/CMakeLists.txt
+++ b/cost/CMakeLists.txt
@@ -1,7 +1,4 @@
 file(GLOB cost_headers ${CMAKE_CURRENT_SOURCE_DIR} *.hpp)
-
-
-
 file(GLOB cost_sources ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
 
 set_directory_properties(PROPERTIES CORRADE_USE_PEDANTIC_FLAGS ON)
@@ -13,7 +10,7 @@ target_include_directories(cost PUBLIC
 target_link_libraries(cost PUBLIC ceres)
 target_link_libraries(cost PRIVATE igl::core Folly::folly autodiff phasefields::scoped_timer)
 if(OpenMP_CXX_FOUND)
-    message(WARNING "not using parallel connectedness constraint")
+    message(WARNING "not using threaded connectedness constraint")
     target_link_libraries(cost PRIVATE OpenMP::OpenMP_CXX)
 endif()
 add_library(phasefields::cost ALIAS cost)
