--- a/cost/CMakeLists.txt
+++ b/cost/CMakeLists.txt
@@ -8,7 +8,7 @@ target_include_directories(cost PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
 
 target_link_libraries(cost PUBLIC ceres)
-target_link_libraries(cost PRIVATE igl::core Folly::folly autodiff phasefields::scoped_timer)
+target_link_libraries(cost PRIVATE igl::core Folly::folly autodiff phasefields::scoped_timer TBB::tbb)
 if(OpenMP_CXX_FOUND)
     message(WARNING "not using threaded connectedness constraint")
     target_link_libraries(cost PRIVATE OpenMP::OpenMP_CXX)
