--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,6 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/modules)
 list(APPEND CMAKE_PREFIX_PATH ${CMAKE_CURRENT_LIST_DIR}/conan_modules)
 
 find_package(Eigen3 CONFIG REQUIRED)
-find_package(Ceres CONFIG REQUIRED)
-find_package(Folly CONFIG REQUIRED)
-find_package(fmt CONFIG REQUIRED)
-find_package(libigl CONFIG REQUIRED)
 find_package(Corrade CONFIG REQUIRED PluginManager Containers TestSuite)
 find_package(Magnum CONFIG REQUIRED GL SceneGraph MeshTools Sdl2Application Shaders Primitives DebugTools)
 find_package(MagnumPlugins CONFIG REQUIRED AssimpImporter)
@@ -24,13 +20,13 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 #list(APPEND CMAKE_CXX_FLAGS "-fsanitize=address -fsanitize=undefined")
 list(APPEND CMAKE_CXX_FLAGS "-ffast-math")
 
+add_subdirectory(utilities)
 add_subdirectory(scoped_timer)
 add_subdirectory(viewer)
 add_subdirectory(cost)
 add_subdirectory(exact_geodesics)
+add_subdirectory(shaders)
 
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(Ipopt REQUIRED IMPORTED_TARGET ipopt)
 
 #set(CMAKE_CXX_STANDARD_LIBRARIES tbb)
 #set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES /usr/local/include/c++/10.0.1)
@@ -43,8 +39,6 @@ add_executable(segmentation
         colormaps.cpp
         brush.cpp
         brush.hpp
-        update_scene.hpp
-        update_scene.cpp
         subdivision.cpp
         subdivision.hpp
         mesh_io.cpp
@@ -58,19 +52,12 @@ add_executable(segmentation
         phasefield_data.hpp)
 
 target_link_libraries(segmentation PRIVATE
-        PkgConfig::Ipopt
         phasefields::viewer
         phasefields::scoped_timer
         phasefields::cost
-        phasefields::exact_geodesic
-        MagnumIntegration::Eigen
+        phasefields::exact_geodesics
         Magnum::Primitives
-        fmt::fmt
-        ceres
         MagnumPlugins::AssimpImporter
         )
-
-        
-target_compile_definitions(segmentation PRIVATE CONF_PATH="${CMAKE_CURRENT_LIST_DIR}/phasefields.conf")
 
 #add_subdirectory(tests)
