WIP: refactor again

--- a/cost/CMakeLists.txt
+++ b/cost/CMakeLists.txt
@@ -1,7 +1,9 @@
 find_package(Ceres CONFIG REQUIRED)
 find_package(TBB CONFIG REQUIRED)
+
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(Ipopt REQUIRED IMPORTED_TARGET ipopt)
+pkg_check_modules(Adolc REQUIRED IMPORTED_TARGET adolc)
 
 file(GLOB cost_headers ${CMAKE_CURRENT_SOURCE_DIR} *.hpp)
 file(GLOB cost_sources ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
@@ -12,9 +14,11 @@ add_library(cost STATIC ${cost_sources} ${cost_headers})
 target_include_directories(cost PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
 
+find_package(libigl CONFIG REQUIRED)
 
 target_link_libraries(cost PRIVATE
         ceres
+        igl::core
         Eigen3::Eigen
         autodiff
         TBB::tbb
@@ -23,6 +27,7 @@ target_link_libraries(cost PRIVATE
 
 target_link_libraries(cost PUBLIC
         PkgConfig::Ipopt
+        PkgConfig::Adolc
         phasefields::utilities
         )
 
