--- a/polygonizer/CMakeLists.txt
+++ b/polygonizer/CMakeLists.txt
@@ -10,5 +10,5 @@ add_library(polygonizer STATIC
 #        )
 target_include_directories(polygonizer PUBLIC ${CMAKE_CURRENT_LIST_DIR})
 target_link_libraries(polygonizer PRIVATE GSL::gsl CGAL::CGAL CGAL::CGAL_Core)
-
+set_property(TARGET polygonizer PROPERTY POSITION_INDEPENDENT_CODE ON)
 add_library(phasefields::polygonizer ALIAS polygonizer)
