--- a/scoped_timer/CMakeLists.txt
+++ b/scoped_timer/CMakeLists.txt
@@ -6,4 +6,5 @@ target_include_directories(scoped_timer PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
 
 target_link_libraries(scoped_timer PUBLIC Corrade::Containers)
+set_property(TARGET scoped_timer PROPERTY POSITION_INDEPENDENT_CODE ON)
 add_library(phasefields::scoped_timer ALIAS scoped_timer)
