fix release bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ list(APPEND CMAKE_CXX_FLAGS "-frounding-math")
 add_subdirectory(utilities)
 add_subdirectory(scoped_timer)
 add_subdirectory(visualization)
-add_subdirectory(polygonizer)
+#add_subdirectory(polygonizer)
 add_subdirectory(cost)
 add_subdirectory(exact_geodesics)
 add_subdirectory(shaders)
