add mesh loading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,13 +13,11 @@ find_package(MagnumPlugins CONFIG REQUIRED AssimpImporter)
 find_package(MagnumIntegration CONFIG REQUIRED ImGui Eigen)
 find_package(ImGui REQUIRED COMPONENTS SourcesMiscCpp)
 find_package(TBB CONFIG REQUIRED)
-#find_package(ParallelSTL CONFIG REQUIRED)
-#find_package(Enoki CONFIG REQUIRED)
 
 #set_directory_properties(PROPERTIES CORRADE_USE_PEDANTIC_FLAGS ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 #list(APPEND CMAKE_CXX_FLAGS "-fsanitize=address -fsanitize=undefined")
-list(APPEND CMAKE_CXX_FLAGS "-frounding-math")
+set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE "${CMAKE_COMMAND} -E time")
 
 add_subdirectory(utilities)
 add_subdirectory(scoped_timer)
