rework loss functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(phasefields)
 set(CMAKE_CXX_STANDARD 20)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/modules)
-#list(APPEND CMAKE_PREFIX_PATH ${CMAKE_CURRENT_LIST_DIR}/conan_modules)
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/conan_modules)
 
 find_package(Eigen3 CONFIG REQUIRED)
 find_package(Corrade CONFIG REQUIRED PluginManager Containers TestSuite)
@@ -13,6 +13,7 @@ find_package(MagnumPlugins CONFIG REQUIRED AssimpImporter)
 find_package(MagnumIntegration CONFIG REQUIRED ImGui Eigen)
 find_package(ImGui REQUIRED COMPONENTS SourcesMiscCpp)
 find_package(TBB CONFIG REQUIRED)
+find_package(ipopt REQUIRED)
 
 #set_directory_properties(PROPERTIES CORRADE_USE_PEDANTIC_FLAGS ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
@@ -26,10 +27,11 @@ add_subdirectory(visualization)
 #add_subdirectory(polygonizer)
 #add_subdirectory(math)
 #add_subdirectory(shaders)
+add_subdirectory(visualization_proxy)
+add_subdirectory(optimization)
 add_subdirectory(cost)
 add_subdirectory(exact_geodesics)
 add_subdirectory(viewer)
-
 
 #set(CMAKE_CXX_STANDARD_LIBRARIES tbb)
 #set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES /usr/local/include/c++/10.0.1)
