--- a/cost/CMakeLists.txt
+++ b/cost/CMakeLists.txt
@@ -2,7 +2,10 @@ find_package(Ceres CONFIG REQUIRED)
 find_package(TBB CONFIG REQUIRED)
 
 find_package(PkgConfig REQUIRED)
-pkg_check_modules(Ipopt REQUIRED IMPORTED_TARGET ipopt)
+
+list(APPEND CMAKE_PREFIX_PATH /home/janos/libraries/prefix/)
+set(PKG_CONFIG_USE_CMAKE_PREFIX_PATH ON)
+
 pkg_check_modules(Adolc REQUIRED IMPORTED_TARGET adolc)
 
 set_directory_properties(PROPERTIES CORRADE_USE_PEDANTIC_FLAGS ON)
@@ -17,46 +20,36 @@ add_library(cost STATIC
         dijkstra.hpp
         fem.cpp
         fem.hpp
-        functional.hpp
         graph_common.hpp
-        loss_functions.cpp
-        loss_functions.hpp
         meta_data.hpp
         meta_data.cpp
         modica_mortola.cpp
         modica_mortola.hpp
-        problem.cpp
-        problem.hpp
-        small_array.hpp
-        solver.cpp
-        solver.hpp
         stopping_criteria.cpp
         stopping_criteria.hpp
         union_find.cpp
         union_find.hpp
         strang_rules.hpp
         phasefield_tree.hpp
-        adolc_adapter.h
-        adolc_adapter.hpp)
+        )
 
 target_include_directories(cost PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
 
 target_link_libraries(cost PRIVATE
-        ceres
-        TBB::tbb
         phasefields::scoped_timer
+        phasefields::optimization
         )
 
 target_link_libraries(cost PUBLIC
-        PkgConfig::Ipopt
-        PkgConfig::Adolc
         Eigen3::Eigen
         phasefields::utilities
         phasefields::visualization
+        phasefields::visualization_proxy
         )
 
 set_property(TARGET cost PROPERTY POSITION_INDEPENDENT_CODE ON)
 
 add_library(phasefields::cost ALIAS cost)
+
 
