fix half edge data structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_CXX_STANDARD 20)
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/modules)
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/conan_modules)
 
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
 find_package(Eigen3 CONFIG REQUIRED)
 find_package(Corrade CONFIG REQUIRED PluginManager Containers TestSuite)
 find_package(Magnum CONFIG REQUIRED GL SceneGraph MeshTools Sdl2Application Shaders Primitives DebugTools)
@@ -26,9 +28,10 @@ add_subdirectory(ScopedTimer)
 add_subdirectory(Visualization)
 #add_subdirectory(polygonizer)
 #add_subdirectory(math)
-add_subdirectory(Shaders)
+#add_subdirectory(Shaders)
 add_subdirectory(Optimization)
-add_subdirectory(Cost)
+add_subdirectory(Mesh)
+#add_subdirectory(Cost)
 add_subdirectory(Viewer)
 
 #set(CMAKE_CXX_STANDARD_LIBRARIES tbb)
