--- a/Cost/CMakeLists.txt
+++ b/Cost/CMakeLists.txt
@@ -11,26 +11,26 @@ pkg_check_modules(Adolc REQUIRED IMPORTED_TARGET adolc)
 set_directory_properties(PROPERTIES CORRADE_USE_PEDANTIC_FLAGS ON)
 
 add_library(Cost STATIC
-        Fem.cpp
-        Fem.h
-        ModicaMortola.cpp
-        ModicaMortola.h
-        SparseMatrix.h
-        SparseMatrix.cpp
-        StrangRules.hpp
-        Mesh.h
-        Mesh.cpp
-        FastMarchingMethod.cpp
-        FastMarchingMethod.h
-        YamabeSolver.cpp
-        YamabeSolver.h)
+
+        #Fem.cpp
+        #Fem.h
+        #ModicaMortola.cpp
+        #ModicaMortola.h
+        #SparseMatrix.h
+        #SparseMatrix.cpp
+        #StrangRules.hpp
+        #FastMarchingMethod.cpp
+        #FastMarchingMethod.h
+        #YamabeSolver.cpp
+        #YamabeSolver.h
+        )
 
 target_include_directories(Cost PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
 
 target_link_libraries(Cost PRIVATE
         ScopedTimer::ScopedTimer
-        Phasefield::Optimization
+        #Phasefield::Optimization
         )
 
 target_link_libraries(Cost PUBLIC
